[gd_scene load_steps=24 format=3 uid="uid://b055x1gx1vnig"]

[ext_resource type="Script" path="res://levels/menus/win_screen.gd" id="1_dtby3"]
[ext_resource type="Script" path="res://levels/parallax_background.gd" id="2_1pxps"]
[ext_resource type="Texture2D" uid="uid://bphwxf2glq4lt" path="res://player/art/Main Ship - Base - Full health.png" id="2_cyc4q"]
[ext_resource type="Texture2D" uid="uid://c85dye611j5j" path="res://levels/art/level_2_bg.png" id="3_rsy2d"]
[ext_resource type="FontFile" uid="uid://b6ol51f5b1c2j" path="res://random_shit/SPACEBOY.TTF" id="6_avnbv"]
[ext_resource type="Theme" uid="uid://ugv1ptuyjojl" path="res://main_theme.tres" id="7_ki2jp"]
[ext_resource type="Script" path="res://levels/menus/play_again_button.gd" id="8_61724"]

[sub_resource type="Animation" id="Animation_44oya"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(789, 2199)]
}

[sub_resource type="Animation" id="Animation_q8ame"]
resource_name = "enter_ship"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 0.2),
"update": 0,
"values": [Vector2(785, 2199), Vector2(785, 1130)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_idle_anim"
}]
}

[sub_resource type="Animation" id="Animation_i66jt"]
resource_name = "ship_idle"
length = 3.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.65, 1.45, 2.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(668, 1027), Vector2(836, 956), Vector2(988, 1123), Vector2(785, 1130)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbann"]
_data = {
"RESET": SubResource("Animation_44oya"),
"enter_ship": SubResource("Animation_q8ame"),
"ship_idle": SubResource("Animation_i66jt")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmw0h"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_4426t"]
font = ExtResource("6_avnbv")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hrr8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_qo065"]
font = ExtResource("6_avnbv")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_mhewb"]
font = ExtResource("6_avnbv")
font_size = 24

[sub_resource type="Gradient" id="Gradient_uduvj"]
offsets = PackedFloat32Array(0, 0.140271, 1)
colors = PackedColorArray(1, 1, 0, 0, 1, 0.545098, 0, 1, 1, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qadm7"]
gradient = SubResource("Gradient_uduvj")

[sub_resource type="Curve" id="Curve_ilq51"]
_data = [Vector2(0, 1), 0.0, -1.44444, 0, 0, Vector2(1, 0), 0.944445, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_n3as6"]
curve = SubResource("Curve_ilq51")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uxyx8"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 8.75
gravity = Vector3(0, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 25.0
scale_max = 35.0
scale_curve = SubResource("CurveTexture_n3as6")
color_ramp = SubResource("GradientTexture1D_qadm7")
turbulence_noise_strength = 3.34

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3ee6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_ark07"]
font = ExtResource("6_avnbv")
font_size = 24

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dtby3")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_1pxps")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 2000)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(640, 1000)
texture = ExtResource("3_rsy2d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "enter_ship"
libraries = {
"": SubResource("AnimationLibrary_lbann")
}

[node name="WinMessagePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 96.0
offset_right = 1160.0
offset_bottom = 368.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vmw0h")

[node name="VBoxContainer" type="VBoxContainer" parent="WinMessagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer2" type="Label" parent="WinMessagePanel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_4426t")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Success!" type="Label" parent="WinMessagePanel/VBoxContainer"]
layout_mode = 2
text = "Success!"
label_settings = SubResource("LabelSettings_4426t")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Label" parent="WinMessagePanel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_4426t")
horizontal_alignment = 1
autowrap_mode = 2

[node name="MainMessage" type="Label" parent="WinMessagePanel/VBoxContainer"]
layout_mode = 2
text = "You have defended the galaxy and are awarded the highest rank of flight officer. Your legend will be passed down for millennia to come."
label_settings = SubResource("LabelSettings_4426t")
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 767.0
offset_right = 752.0
offset_bottom = 1253.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7hrr8")

[node name="VBoxContainer" type="VBoxContainer" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsTitle" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "


Stats



"
label_settings = SubResource("LabelSettings_qo065")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreHorizontal" type="HBoxContainer" parent="StatsPanel/VBoxContainer"]
layout_mode = 2

[node name="ScoreTitle" type="Label" parent="StatsPanel/VBoxContainer/ScoreHorizontal"]
layout_mode = 2
text = "Score: "
label_settings = SubResource("LabelSettings_mhewb")

[node name="ScoreLabel" type="Label" parent="StatsPanel/VBoxContainer/ScoreHorizontal"]
layout_mode = 2
label_settings = SubResource("LabelSettings_mhewb")

[node name="EnemiesKilledHorizontal" type="HBoxContainer" parent="StatsPanel/VBoxContainer"]
layout_mode = 2

[node name="EnemiesKilledTitle" type="Label" parent="StatsPanel/VBoxContainer/EnemiesKilledHorizontal"]
layout_mode = 2
text = "Enemies Killed: "
label_settings = SubResource("LabelSettings_mhewb")

[node name="EnemiesKilledLabel" type="Label" parent="StatsPanel/VBoxContainer/EnemiesKilledHorizontal"]
layout_mode = 2
label_settings = SubResource("LabelSettings_mhewb")

[node name="PowerupsCollectedHorizontal" type="HBoxContainer" parent="StatsPanel/VBoxContainer"]
layout_mode = 2

[node name="PowerupsCollectedTitle" type="Label" parent="StatsPanel/VBoxContainer/PowerupsCollectedHorizontal"]
layout_mode = 2
text = "Powerups Collected: "
label_settings = SubResource("LabelSettings_mhewb")

[node name="PowerupsCollectedLabel" type="Label" parent="StatsPanel/VBoxContainer/PowerupsCollectedHorizontal"]
layout_mode = 2
label_settings = SubResource("LabelSettings_mhewb")

[node name="ShipSprite" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(789, 2199)
scale = Vector2(10, 10)
texture = ExtResource("2_cyc4q")

[node name="EngineFX" type="GPUParticles2D" parent="ShipSprite"]
z_index = 3
z_as_relative = false
position = Vector2(0, 9.00001)
amount = 100
process_material = SubResource("ParticleProcessMaterial_uxyx8")
lifetime = 0.5
speed_scale = 0.75
fixed_fps = 60
trail_lifetime = 0.1

[node name="AttributesPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 1624.0
offset_right = 756.0
offset_bottom = 1960.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w3ee6")

[node name="VBoxContainer" type="VBoxContainer" parent="AttributesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArtTitle" type="Label" parent="AttributesPanel/VBoxContainer"]
layout_mode = 2
text = "Art:"
label_settings = SubResource("LabelSettings_ark07")

[node name="Artists" type="Label" parent="AttributesPanel/VBoxContainer"]
layout_mode = 2
text = "Backgrounds by Deep Fold
Lasers by Wenrexa
Ships by FoozleCC
Icons by Mark Krukowski
"
label_settings = SubResource("LabelSettings_ark07")

[node name="Spacer" type="Label" parent="AttributesPanel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ark07")
horizontal_alignment = 1

[node name="SoundTitle" type="Label" parent="AttributesPanel/VBoxContainer"]
layout_mode = 2
text = "Sound:"
label_settings = SubResource("LabelSettings_ark07")

[node name="SoundDesigners" type="Label" parent="AttributesPanel/VBoxContainer"]
layout_mode = 2
text = "Music by DOS88"
label_settings = SubResource("LabelSettings_ark07")

[node name="Spacer2" type="Label" parent="AttributesPanel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ark07")
horizontal_alignment = 1

[node name="ThanksMessage" type="Label" parent="AttributesPanel/VBoxContainer"]
layout_mode = 2
text = "Thank you for playing!"
label_settings = SubResource("LabelSettings_ark07")
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 724.0
offset_top = 1685.0
offset_right = 1202.0
offset_bottom = 1823.0
theme = ExtResource("7_ki2jp")
theme_override_font_sizes/font_size = 50
text = "Play Again"
script = ExtResource("8_61724")

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_button_pressed"]
